--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tensorflow/tfjs-converter": "^4.16.0",
     "@tensorflow/tfjs-core": "^4.16.0",
     "@tensorflow/tfjs-layers": "^4.16.0",
+    "@tensorflow/tfjs-node-gpu": "^4.16.0",
     "core-js": "^3.8.3",
+    "fs": "^0.0.1-security",
     "mathjs": "^12.3.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
